busy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busy-pod
  labels:
    owner: ly
    env: demo
    region: north
    tier: back
spec:
  containers:
  - image: busybox:latest
    name: busy
    imagePullPolicy: IfNotPresent
    command:
      - /bin/echo
    args:
      - "$(os), $(debug)"
