ngx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ngx-pod
  labels:
    env: demo
    owner: ly

spec:
  containers:
  - image: nginx:alpine
    name: ngx
    ports:
    - containerPort: 80
