ngx-svc.yml

apiVersion: v1
kind: Service
metadata:
  name: ngx-svc

spec:
  type: NodePort
  selector:
    app: ngx-dep

  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
